src/main/java/syntactic/test/failing/privateVarInStart.ru
start {
    pri String hola, que, tal;
}